--- a/css/style.css
+++ b/css/style.css
@@ -2052,4 +2052,11 @@ footer .credits {
   .box-collapse .title-box-d .title-d {
     font-size: 1.3rem;
   }
+  .card-shadow{
+
+  }
+
+  .serv-pics{
+    
+  }
 }
