--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,11 @@ h6 {
   color: #000000;
 }
 a{
-  color: #000000;
+  color: #3e5479;
 }
 
 a:hover{
-  color: black;
+  
   text-decoration: none;
 }
 
