--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,18 @@ body {
   font-family: 'Poppins', sans-serif;
   color: #555555;
 }
+/*
 .containerrr {
   position: relative;
   text-align: center;
   color: white;
 }
+
 .top-left {
   position: absolute;
   top: 8px;
   left: 16px;
-}
+}*/
 
 
 
@@ -37,7 +39,7 @@ a:hover{
 
 
 
-
+/*
 
 .disena { 
   font-size: 20px;
@@ -49,6 +51,7 @@ a:hover{
   color:rgba(0,0,0,0);
   text-decoration: none;
 }
+
 @keyframes rainbow { 
   0%{background-position:top}
   50%{background-position:bottom}
@@ -89,7 +92,7 @@ a:hover{
 
 
 
-/*
+
 #asolen {
   
   
@@ -1174,7 +1177,9 @@ a:hover{
 .card-header-a {
   padding: 0 1rem;
 }
-
+.card-title-a{
+  text-align:center ;
+}
 .card-header-a .card-title-a {
   color: #ffffff;
   margin-bottom: 0;
@@ -1209,7 +1214,7 @@ a:hover{
   width: 100%;
   position: absolute;
   z-index: 2;
-  background-color: #92fe9d;
+  background-color: #59a7d8;
 }
 
 .card-info {
@@ -1220,11 +1225,11 @@ a:hover{
 
 .card-info .card-info-title {
   font-size: 1rem;
-  color: #313131;
+  color: #ffffff;
 }
 
 .card-info li span {
-  color: #ffffff;
+  color: #122546;
   font-size: .9rem;
 }
 
@@ -2071,7 +2076,6 @@ footer .credits {
   .box-collapse .title-box-d .title-d {
     font-size: 1.3rem;
   }
-
 
   
 }
