--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
-
+/*
+Theme Name:style.css
+Theme URI:
+Author:Joud
+Author URI:
+Template:Solen
+Description:Wordpress Theme
+Version:1.0
+*/
 body {
   font-family: 'Poppins', sans-serif;
   color: #555555;
