--- a/css/style.css
+++ b/css/style.css
@@ -196,10 +196,10 @@ a:hover{
   color: #3e5479;
 }
 
-/*.color-b {
-  color: #92fe9d;
+color-b {
+  color: #fff;
 }
-
+/*
 .color-d {
   color: #adadad;
 }*/
@@ -371,9 +371,16 @@ a:hover{
 .title-wrap {
   padding-bottom: 4rem;
 }
-
-.title-a {
+.strong-solen{
   color:#3e5479 ;
+  font-size: 2.6rem;
+  font-weight: 600;
+}
+.proj{
+  border: none !important;
+}
+.title-a {
+  color:#313131 ;
  
   font-size: 2.6rem;
   font-weight: 600;
@@ -1088,7 +1095,7 @@ margin-left: 80px;
   transition-duration: 9s !important;
   color: #ffffff;
   font-weight: 700;
-  font-size: 2.8rem;
+  font-size: 1  rem;
   text-transform: uppercase;
 }
 
